fix dark mode bug on team page

--- a/css/team.css
+++ b/css/team.css
@@ -64,7 +64,7 @@ color: white;
 .section-team .single-person {
 	margin-top: 30px;
 	padding: 30px;
-	/* background-color: #f6f9ff;  */
+	background-color: #f6f9ff; 
 	border-radius: 5px;
 }
 
